[package]
name = "play_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false  # 避免 wasm-opt 优化带来的问题

[dependencies]
cosmwasm-std = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
cw-storage-plus = "1.0.0"
schemars = { version = "0.8", features = ["derive"] }
sha2 = "0.9.9"
